Filtro delle classi energetiche funzionante