@@ -21,7 +21,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AnnuncioService {
@@ -129,7 +128,7 @@ public class AnnuncioService {
         List<FotoImmobile> fotoImmobili = fotoImmobileRepository.findByIdAnnuncio(savedAnnuncio.getId());
         List<String> immaginiUrls = fotoImmobili.stream()
                 .map(FotoImmobile::getUrl)
-                .collect(Collectors.toList());
+                .toList();
 
         return new AnnuncioDTO(
                 savedAnnuncio.getIdImmobile(),
@@ -142,7 +141,7 @@ public class AnnuncioService {
         );
     }
 
-    public List<Annuncio> findAnnunciByCittaAndTipoAnnuncioAndTipologiaImmobile(FiltroAnnunciDTO filtro, String citta) {
+    public List<Annuncio> findAnnunciByCittaAndFiltri(FiltroAnnunciDTO filtro, String citta) {
         logger.debug("Ricerca annunci per città : {}, filtro: {}", citta, filtro);
         return annuncioRepository.findByFiltro(filtro, citta);
     }
